# forge-agent-builder

./: .env.example  .gitignore  GETTING-STARTED.md  README.md  conftest.py  pyproject.toml  requirements.txt
.agent-builder/: README.md  TODO.md  agent-design-principles.md  mcp-design-principles.md
.agent-builder/core/: agent-technical-framework-template.md  basic-agent-template.md  multi-agent-network-template.md  supervisor-agent-template.md  tool-use-agent-template.md
.github/: copilot-instructions.md
.github/agents/: forge.agent.clarify.agent.md  forge.agent.implement.agent.md  forge.agent.persona.agent.md  forge.agent.plan.agent.md  forge.agent.specify.agent.md  forge.agent.tasks.agent.md
.github/prompts/: forge.agent.clarify.prompt.md  forge.agent.implement.prompt.md  forge.agent.persona.prompt.md  forge.agent.plan.prompt.md  forge.agent.specify.prompt.md  forge.agent.tasks.prompt.md
agent-specs/forge-requirements-builder/: 01-ORCHESTRATOR-SPEC.md  02-DISCOVERY-AGENT-SPEC.md  02-USER-STORY-AUTHORING-SPEC.md  03-PRIORITIZATION-AGENT-SPEC.md  03-QUALITY-AGENT-SPEC.md  CLARIFICATION-RESULTS.md  CLARIFICATION-SUMMARY.md  CLARIFICATIONS.md  COMPLETE-DELIVERABLES-SUMMARY.md  COMPLETION-SUMMARY.md  DELIVERY-MANIFEST.md  IMPLEMENTATION-GUIDE.md  IMPLEMENTATION-UPDATES.md  INDEX.md  NETWORK-SPEC.md  PERSONA-COMPLETION-REPORT.md  PERSONA-DESIGN-SUMMARY.md  PERSONA-DOCUMENTATION-INDEX.md  PERSONA-EXPERT-SYSTEMS-DESIGNER.md  PERSONA-IMPLEMENTATION-GUIDE.md  PERSONA-INTERACTION-EXAMPLES.md  PLAN-COMPLETION-SUMMARY.md  README.md  plan.md  tasks.md
(+56 files in other folders)
