[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge_requirements_builder"
version = "0.1.0"
description = "Forge Requirements Builder Agent"
authors = [{name = "Forge Agent Builder"}]
dependencies = [
    "langchain",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "python-docx",
    "pypdf"
]

[tool.setuptools.packages.find]
where = ["src"]
